assets/main-product.css
/* ... */
.t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.previous {
  left: 15px;
}
.t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.next {
  right: 15px;
}
.t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.previous,
.t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.next,
.t4s-product__media-wrapper .t4s-flicky-slider:not(:hover) .flickityt4s-button.previous,
.t4s-product__media-wrapper .t4s-flicky-slider:not(:hover) .flickityt4s-button.next,
.t4s-product__media-wrapper .t4s-flicky-slider:not(:hover) .flickityt4s-button {
  -webkit-transform: translateX(0) translateY(-50%);
  -moz-transform: translateX(0) translateY(-50%);
  -ms-transform: translateX(0) translateY(-50%);
  -o-transform: translateX(0) translateY(-50%);
  transform: translate(0) translateY(-50%);
}
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate .flickityt4s-prev-next-button.previous,
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate .flickityt4s-prev-next-button.next,
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate:not(:hover) .flickityt4s-button.previous,
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate:not(:hover) .flickityt4s-button.next,
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate:not(:hover) .flickityt4s-button {
  -webkit-transform: translateX(0) rotate(45deg) translateY(-50%);
  -moz-transform: translateX(0) rotate(45deg) translateY(-50%);
  -ms-transform: translateX(0) rotate(45deg) translateY(-50%);
  -o-transform: translateX(0) rotate(45deg) translateY(-50%);
  transform: translate(0) rotate(45deg) translateY(-50%);
}

.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate .flickityt4s-prev-next-button.next,
.t4s-product__media-wrapper .t4s-flicky-slider.t4s-slider-btn-rotate:not(:hover) .flickityt4s-button.next {
  -webkit-transform: translateX(0) rotate(-45deg) translateY(-50%);
  -moz-transform: translateX(0) rotate(-45deg) translateY(-50%);
  -ms-transform: translateX(0) rotate(-45deg) translateY(-50%);
  -o-transform: translateX(0) rotate(-45deg) translateY(-50%);
  transform: translate(0) rotate(-45deg) translateY(-50%);
}
.t4s-product-tabs-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.previous {
  left: 0;
  right: auto;
}
.t4s-product-tabs-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.next {
  right: 0;
  left: auto;
}
.t4s-product-tabs-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.previous,
.t4s-product-tabs-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.next,
.t4s-product-tabs-wrapper .t4s-flicky-slider:not(:hover) .flickityt4s-button {
  -webkit-transform: translateX(0) translateY(-50%);
    -moz-transform: translateX(0) translateY(-50%);
    -ms-transform: translateX(0) translateY(-50%);
    -o-transform: translateX(0) translateY(-50%);
    transform: translate(0) translateY(-50%);
}
.t4s-product-tabs-wrapper .t4s-tabs-ul.t4s-flicky-slider {
  padding: 0 30px;
}
button.t4s-product__description_readm {
    padding: 0;
    background-color: transparent !important;
    color: var(--secondary-color);
    margin: 0 5px;
    text-decoration: underline;
    display: inline-block;
}
button.t4s-product__description_readm:hover {
    color: var(--accent-color);
}
.t4s-collections-wrapper a:not(:last-child):after,
.t4s-tags-wrapper a:not(:last-child):after {
    content: ', ';
    display: inline-block;
}
.t4s-deferred-media .media-video,
.t4s-deferred-media iframe {
    opacity: 0;
}
.t4s-deferred-media .plyr__video-wrapper .media-video,
.t4s-deferred-media .plyr__video-wrapper iframe {
    opacity: 1;
}
@media(max-width: 767px) {
  .t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.previous {
    left: 0;
  }
  .t4s-product__media-wrapper .t4s-flicky-slider .flickityt4s-prev-next-button.next {
    right: 0;
  }
}

.t4s-complimentary>h3{
  font-size: 16px;
  font-weight: 600;
  color: var(--secondary-color);
  margin-bottom: 15px;
}
.t4s-complimentary_products {
  padding: 0;
}
.t4s-complimentary_product:not(:last-child) {
  margin-bottom: 15px;
}
.t4s-complimentary_product .t4s-widget_img_pr {
  flex: 0 0 auto;
  width: auto;
}
.t4s-complimentary_product .t4s-widget_img_pr > a {
  width: 70px;
  max-width: 70px;
}
.t4s-complimentary_product .t4s-widget_if_pr {
  margin-top: 10px;
  padding-inline-start: 0;
}
.t4s-complimentary_product .t4s-widget__pr-title {
  font-family: var(--font-body-family);
  font-weight: 400;
  margin-bottom: 7px;
}

